[package]
name = "indico-md-py"
version = "0.1.0"
authors = ["Indico Team <indico-team@cern.ch>"]
edition = "2024"

[lib]
name = "indico_md"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
indico-comrak = { path = "../indico-comrak" }

